--- a/source/catalog.html
+++ b/source/catalog.html
@@ -11,29 +11,44 @@
 
 <body class="page__body">
   <header class="main-header">
-    <nav class="navigation">
-      <a class="navigation__logo" href="index.html">
-        <picture>
-          <source media="(min-width: 1440px)" srcset="images/logo-desktop.svg" width="70" height="59" type="image/svg+xml">
-          <source media="(min-width:768px)" srcset="images/logo-tablet.svg" width="60" height="50" type="image/svg+xml">
-          <img class="navigation__logo-image" src="images/logo-mobile.svg" alt="Логотип сайта Cat-energy" width="33" height="38">
-        </picture>
-        <img class="navigation__logo-image" src="images/logo-text.svg" alt="Логотип-слоган" width="101" height="18">
-      </a>
-      <div class="navigation__wrapper">
-        <ul class="navigation__list">
-          <li class="navigation__item "><a class="navigation__link" href="index.html">Главная</a></li>
-          <li class="navigation__item navigation__item--current"><a class="navigation__link" href="index.html">Каталог продукции</a></li>
-          <li class="navigation__item "><a class="navigation__link" href="index.html">Подбор программы</a></li>
-        </ul>
+    <nav class="main-nav">
+      <div class="main-nav__user main-nav__user--closed main-nav__user--nojs">
+        <a class="navigation__logo" href="index.html">
+          <picture>
+            <source media="(min-width: 1440px)" srcset="images/logo-desktop.svg" width="70" height="59" type="image/svg+xml">
+            <source media="(min-width:768px)" srcset="images/logo-tablet.svg" width="60" height="50" type="image/svg+xml">
+            <img class="navigation__logo-image" src="images/logo-mobile.svg" alt="Логотип сайта Cat-energy" width="33" height="38">
+          </picture>
+          <img class="navigation__logo-text" src="images/logo-text.svg" alt="Логотип-слоган" width="101" height="18">
+        </a>
+        <button class="main-nav__toggle" type="button">
+          <span class="visually-hidden">Открыть меню</span>
+        </button>
+        <div class="main-nav__wrapper">
+          <ul class="site-list main-nav__list site-list--change">
+            <li class="site-list__item ">
+              <a class="navigation__link navigation__link--catalog" href="index.html">
+                Главная
+              </a>
+            </li>
+            <li class="site-list__item site-list__item--active">
+              <a class="navigation__link navigation__link--catalog" href="catalog.html">
+                Каталог продукции
+              </a>
+            </li>
+            <li class="site-list__item">
+              <a class="navigation__link navigation__link--catalog" href="programm.html">
+                Подбор программы
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
-      <button class="navigation__menu-button" type="button">
-        <span class="visually-hidden">Открыть меню</span></button>
     </nav>
   </header>
   <main class="main-container">
     <section class="catalog">
-      <div class="catalog__wrapper">
+      <div class="wrapper">
         <h1 class="catalog__title">Каталог продукции</h1>
         <div class="catalog__list">
           <article class="catalog__item">
@@ -55,7 +70,7 @@
               <dt class="catalog__info-title">Цена</dt>
               <dd class="catalog__info-description">700 &#8381;</dd>
             </dl>
-            <a class="button button-primary catalog__button" href="#">Заказать</a>
+            <a class="button button--products" href="#">Заказать</a>
           </article>
           <article class="catalog__item">
             <a class="catalog__image-link" href="product.html">
@@ -76,7 +91,7 @@
               <dt class="catalog__info-title">Цена</dt>
               <dd class="catalog__info-description">1000 &#8381;</dd>
             </dl>
-            <a class="button button-primary catalog__button" href="#">Заказать</a>
+            <a class="button button--products" href="#">Заказать</a>
           </article>
           <article class="catalog__item">
             <a class="catalog__image-link" href="product.html">
@@ -97,7 +112,7 @@
               <dt class="catalog__info-title">Цена</dt>
               <dd class="catalog__info-description">700 &#8381;</dd>
             </dl>
-            <a class="button button-primary catalog__button" href="#">Заказать</a>
+            <a class="button button--products" href="#">Заказать</a>
           </article>
           <article class="catalog__item">
             <a class="catalog__image-link" href="product.html">
@@ -118,7 +133,7 @@
               <dt class="catalog__info-title">Цена</dt>
               <dd class="catalog__info-description">1000 &#8381;</dd>
             </dl>
-            <a class="button button-primary catalog__button" href="#">Заказать</a>
+            <a class="button button--products" href="#">Заказать</a>
           </article>
           <article class="catalog__item">
             <a class="catalog__image-link" href="product.html">
@@ -139,7 +154,7 @@
               <dt class="catalog__info-title">Цена</dt>
               <dd class="catalog__info-description">400 &#8381;</dd>
             </dl>
-            <a class="button button-primary catalog__button" href="#">Заказать</a>
+            <a class="button button--products" href="#">Заказать</a>
           </article>
           <article class="catalog__item">
             <a class="catalog__image-link" href="product.html">
@@ -160,7 +175,7 @@
               <dt class="catalog__info-title">Цена</dt>
               <dd class="catalog__info-description">700 &#8381;</dd>
             </dl>
-            <a class="button button-primary catalog__button" href="#">Заказать</a>
+            <a class="button button--products" href="#">Заказать</a>
           </article>
           <article class="catalog__item">
             <a class="catalog__image-link" href="product.html">
@@ -181,66 +196,88 @@
               <dt class="catalog__info-title">Цена</dt>
               <dd class="catalog__info-description">500 &#8381;</dd>
             </dl>
-            <a class="button button-primary catalog__button" href="#">Заказать</a>
+            <a class="button button--products" href="#">Заказать</a>
           </article>
-          <article class="catalog__info">
-            <h3 class="catalog__item-show-more-title">Показать еще 100500 товаров</h3>
+          <article class="card__info">
+            <h3 class="catalog__item-show-more-title">Показать еще <br> 100500 товаров</h3>
             <p class="catalog__item-subtitle">На самом деле вкусов гораздо больше!</p>
-            <a class="button button-secondary " href="#">Показать всё</a>
+            <a class="button button--change" href="#">Показать всё</a>
           </article>
         </div>
       </div>
     </section>
     <section class="additional-products">
-      <h2 class="additional-products__title">Дополнительные товары</h2>
-      <ul class="additional-products_list">
-        <li class="additional-products__item">
-          <p class="additional-products__item-title">Сахарозаменитель</p>
-          <p class="additional-products__item-description">1 упаковка &#40;100 г&#41</p>
-          <p class="additional-products__item-rpice"><span>200</span> &#8381</p>
-          <a class="button button-primary " href="#">Заказать</a>
-        </li>
-        <li class="additional-products__item">
-          <p class="additional-products__item-title">Питьевая вода</p>
-          <p class="additional-products__item-description">5 литров</p>
-          <p class="additional-products__item-rpice"><span>50</span> &#8381</p>
-          <a class="button button-primary" href="#">Заказать</a>
-        </li>
-        <li class="additional-products__item">
-          <p class="additional-products__item-title">Молоко</p>
-          <p class="additional-products__item-description">1 литр</p>
-          <p class="additional-products__item-rpice"><span>100</span> &#8381</p>
-          <a class="button button-primary" href="#">Заказать</a>
-        </li>
-        <li class="additional-products__item">
-          <p class="additional-products__item-title">Витамины</p>
-          <p class="additional-products__item-description">1 упаковка &#40;30 г&#41</p>
-          <p class="additional-products__item-rpice"><span>300</span> &#8381</p>
-          <a class="button button-primary" href="#">Заказать</a>
-        </li>
-      </ul>
-      <div class="banner">
-        <div class="banner__wrapper">
-          <p class="banner__title">Закажите все и получите чехол для кота в подарок</p>
+      <div class="wrapper">
+        <h2 class="additional-products__title">Дополнительные товары</h2>
+        <ul class="additional-products_list">
+          <li class="additional-products__item">
+            <div class="additional-products__wrapper">
+              <p class="additional-products__item-title">Сахарозаменитель</p>
+              <div class="additional-products__item-wrapper">
+                <p class="additional-products__item-description">1 упаковка &#40;100 г&#41</p>
+                <p class="additional-products__item-price"><span>200</span> &#8381</p>
+              </div>
+            </div>
+            <a class="button button--additional " href="#">Заказать</a>
+          </li>
+          <li class="additional-products__item">
+            <div class="additional-products__wrapper">
+              <p class="additional-products__item-title">Питьевая вода</p>
+              <div class="additional-products__item-wrapper">
+                <p class="additional-products__item-description">5 литров</p>
+                <p class="additional-products__item-price"><span>50</span> &#8381</p>
+              </div>
+            </div>
+            <a class="button  button--additional" href="#">Заказать</a>
+          </li>
+          <li class="additional-products__item">
+            <div class="additional-products__wrapper">
+              <p class="additional-products__item-title">Молоко</p>
+              <div class="additional-products__item-wrapper">
+                <p class="additional-products__item-description">1 литр</p>
+                <p class="additional-products__item-price"><span>100</span> &#8381</p>
+              </div>
+            </div>
+            <a class="button  button--additional" href="#">Заказать</a>
+          </li>
+          <li class="additional-products__item">
+            <div class="additional-products__wrapper">
+              <p class="additional-products__item-title">Витамины</p>
+              <div class="additional-products__item-wrapper">
+                <p class="additional-products__item-description">1 упаковка &#40;30 г&#41</p>
+                <p class="additional-products__item-price"><span>300</span> &#8381</p>
+              </div>
+            </div>
+            <a class="button  button--additional" href="#">Заказать</a>
+          </li>
+        </ul>
+        <div class="banner">
+          <div class="banner__wrapper">
+            <p class="banner__title">Закажите все и получите чехол для кота в подарок</p>
+          </div>
         </div>
       </div>
     </section>
     <section class="subscribe">
-      <div class="subscribe__wrapper">
-        <h2 class="subscribe__title">Акции и новинки</h2>
-        <p class="subscribe__description">Подпишитесь на наши новости и не пропустите ни одного предложения!</p>
-        <form action="https://echo.htmlacademy.ru/" method="post">
-          <label>
-            <input class="input" type="email" name="email" id="email-subscribe" placeholder="kuklachev@gmail.com" required>
-          </label>
-          <button type="submit">Подписаться</button>
-        </form>
+      <div class="wrapper">
+        <div class="subscribe__wrapper">
+          <h2 class="subscribe__title">Акции и новинки</h2>
+          <p class="subscribe__description">Подпишитесь на наши новости и не пропустите ни одного <br> предложения!</p>
+          <form class="subscribe__form" action="https://echo.htmlacademy.ru/" method="post">
+            <label>
+              <input class="subscribe__field" type="email" name="email" id="email-subscribe" placeholder="kuklachev@gmail.com" required>
+            </label>
+            <button class="button button--news" type="submit">Подписаться</button>
+          </form>
+        </div>
       </div>
     </section>
     <section class="contact">
-      <div class="contact__wrapper">
-        <h2 class="contact__title">приглашаем<br>к сотрудничеству<br> дилеров!</h2>
-        <address class="contact__address">ул.Большая<br>Конюшенная, д. 19/8,<br>Санкт-Петербрург</address>
+      <div class="wrapper">
+        <div class="contact__wrapper">
+          <h2 class="contact__title">приглашаем<br>к сотрудничеству<br> дилеров!</h2>
+          <address class="contact__address">ул.Большая<br>Конюшенная, д. 19/8,<br>Санкт-Петербрург</address>
+        </div>
       </div>
     </section>
     <section class="map">
@@ -253,21 +290,23 @@
     </section>
   </main>
   <footer class="main-footer">
-    <div class="main-footer__wrapper">
-      <a class="main-footer__logo" href="index.html">
-        <img class="main-footer__logo-image" src="images/footer-logo.svg" alt="Логотип сайта." width="128" height="24">
-      </a>
-      <ul class="social">
-        <li class="social__item"><a class="social__link social__link--vkontakte" href="#"><span class="visually-hidden">Вконтакте</span></a></li>
-        <li class="social__item"><a class="social__link social__link--youtube" href="#"><span class="visually-hidden">Ютуб</span></a></li>
-        <li class="social__item"><a class="social__link social__link--telegram" href="#"><span class="visually-hidden">Телеграмм</span></a></li>
-      </ul>
-      <a class="main-footer__logo-copyright" href="https://htmlacademy.ru/intensive/adaptive" aria-label="HTML Academy">
-        <p class="main-footer__text">HTML Academy</p>
-        <svg width="27" height="34">
-          <use href="icons/logo-htmlacademy.svg"></use>
-        </svg>
-      </a>
+    <div class="wrapper">
+      <div class="main-footer__wrapper">
+        <a class="main-footer__logo" href="index.html">
+          <img class="main-footer__logo-image" src="images/footer-logo.svg" alt="Логотип сайта." width="128" height="24">
+        </a>
+        <ul class="social">
+          <li class="social__item"><a class="social__link social__link--vkontakte" href="#"><span class="visually-hidden">Вконтакте</span></a></li>
+          <li class="social__item"><a class="social__link social__link--youtube" href="#"><span class="visually-hidden">Ютуб</span></a></li>
+          <li class="social__item"><a class="social__link social__link--telegram" href="#"><span class="visually-hidden">Телеграмм</span></a></li>
+        </ul>
+        <a class="main-footer__logo-copyright" href="https://htmlacademy.ru/intensive/adaptive" aria-label="HTML Academy">
+          <p class="main-footer__text">HTML Academy</p>
+          <svg class="copyright__logo" width="27" height="34">
+            <use href="../source/icons/stack.svg#logo-htmlacademy"></use>
+          </svg>
+        </a>
+      </div>
     </div>
   </footer>
 </body>
