--- a/source/index.html
+++ b/source/index.html
@@ -16,122 +16,149 @@
 
 <body class="page__body">
   <header class="main-header">
-    <nav class="navigation">
-      <a class="navigation__logo" href="index.html">
-        <picture>
-          <source media="(min-width: 1440px)" srcset="images/logo-desktop.svg" width="70" height="59" type="image/svg+xml">
-          <source media="(min-width:768px)" srcset="images/logo-tablet.svg" width="60" height="50" type="image/svg+xml">
-          <img class="navigation__logo-image" src="images/logo-mobile.svg" alt="Логотип сайта Cat-energy" width="33" height="38">
-        </picture>
-        <img class="navigation__logo-text" src="images/logo-text.svg" alt="Логотип-слоган" width="101" height="18">
-      </a>
-      <div class="navigation__wrapper">
-        <ul class="navigation__list">
-          <li class="navigation__item navigation__item--current"><a class="navigation__link" href="index.html">Главная</a></li>
-          <li class="navigation__item "><a class="navigation__link" href="catalog.html">Каталог продукции</a></li>
-          <li class="navigation__item "><a class="navigation__link" href="index.html">Подбор программы</a></li>
-        </ul>
-      </div>
-      <div class="button-wrapper">
-        <button class="burger-button burger-button--close" type="button">
-          <span class="visually-hidden">Открыть меню</span></button>
+    <nav class="main-nav">
+      <div class="main-nav__user main-nav__user--closed main-nav__user--nojs">
+        <a class="navigation__logo" href="index.html">
+          <picture>
+            <source media="(min-width: 1440px)" srcset="images/logo-desktop.svg" width="70" height="59" type="image/svg+xml">
+            <source media="(min-width:768px)" srcset="images/logo-tablet.svg" width="60" height="50" type="image/svg+xml">
+            <img class="navigation__logo-image" src="images/logo-mobile.svg" alt="Логотип сайта Cat-energy" width="33" height="38">
+          </picture>
+          <img class="navigation__logo-text" src="images/logo-text.svg" alt="Логотип-слоган" width="101" height="18">
+        </a>
+        <button class="main-nav__toggle" type="button">
+          <span class="visually-hidden">Открыть меню</span>
+        </button>
+        <div class="main-nav__wrapper">
+          <ul class="site-list main-nav__list site-list--change">
+            <li class="site-list__item site-list__item--active">
+              <a class="navigation__link" href="index.html">
+                Главная
+              </a>
+            </li>
+            <li class="site-list__item">
+              <a class="navigation__link" href="catalog.html">
+                Каталог продукции
+              </a>
+            </li>
+            <li class="site-list__item">
+              <a class="navigation__link" href="programm.html">
+                Подбор программы
+              </a>
+            </li>
+          </ul>
+        </div>
       </div>
     </nav>
     <section class="promo">
-      <h1 class="promo__title">Функциональное <br> питание для котов</h1>
-      <p class="promo__description">Занялся собой? Займись котом!</p>
-      <picture>
-        <source width="552" height="499" type="image/png" media="(min-width: 1440px)" srcset="images/index-images/index-desktop/promo-desktop@1x.png 1x,images/index-images/index-desktop/promo-desktop@2x.png 2x">
-        <source width="280" height="270" type="image/png" media="(min-width:768px)" srcset="images/index-images/index-tablet/promo-tablet@1x.png 1x, images/index-images/index-tablet/promo-tablet@2x.png 2x">
-        <img class="promo__image" src="images/index-images/index-mobile/promo-mobile@1x.png" srcset="images/index-images/index-mobile/promo-mobile@2x.png 2x" alt="Полезная еда" width="280" height="270">
-      </picture>
-      <a class="button" href="program.html">Подобрать программу</a>
+      <div class="wrapper">
+        <h1 class="promo__title">Функциональное <br> питание для котов</h1>
+        <p class="promo__description">Занялся собой? Займись котом!</p>
+        <picture>
+          <source width="552" height="499" type="image/png" media="(min-width: 1440px)" srcset="images/index-images/index-desktop/promo-desktop@1x.png 1x,images/index-images/index-desktop/promo-desktop@2x.png 2x">
+          <source width="709" height="609" type="image/png" media="(min-width:768px)" srcset="images/index-images/index-tablet/promo-tablet@1x.png 1x, images/index-images/index-tablet/promo-tablet@2x.png 2x">
+          <img class="promo__image" src="images/index-images/index-mobile/promo-mobile@1x.png" srcset="images/index-images/index-mobile/promo-mobile@2x.png 2x" alt="Полезная еда" width="280" height="270">
+        </picture>
+        <a class="button promo__link" href="program.html">Подобрать программу</a>
+      </div>
     </section>
   </header>
   <main class="main-container">
     <section class="programs">
-      <h2 class="visually-hidden">Наши програмым.</h2>
-      <div class="feature__wrapper">
-        <article class="feature ">
-          <h3 class="feature__title feature__title--slim-icon">Похудение</h3>
-          <p class="feature__description">Ваш кот весит больше собаки и почти утратил способность
-            лазить по деревьям? Пора на диету! Cat Energy Slim поможет
-            вашему питомцу сбросить лишний вес.</p>
-          <a class="feature__link" href="catalog-slim.html">Каталог Slim</a>
-        </article>
-        <article class="feature ">
-          <h3 class="feature__title feature__title--pro-icon">набор массы</h3>
-          <p class="feature__description">Заработать авторитет среди дворовых котов и даже собак?
-            Серия Cat Energy Pro поможет вашему коту нарастить
-            необходимые мышцы!</p>
-          <a class="feature__link" href="catalog-pro.html">Каталог Pro</a>
-        </article>
+      <div class="wrapper">
+        <h2 class="visually-hidden">Наши програмым.</h2>
+        <ul class="feature__list">
+          <li class="feature__item feature__item--slim">
+            <h3 class="feature__title feature__title--slim-icon">Похудение</h3>
+            <p class="feature__description">Ваш кот весит больше собаки и <br> почти утратил способность лазить <br> по деревьям? Пора на диету! Cat <br> Energy Slim поможет вашему <br> питомцу сбросить лишний вес.</p>
+            <a class="feature__link" href="catalog-slim.html">Каталог Slim</a>
+          </li>
+          <li class="feature__item feature__item--pro">
+            <h3 class="feature__title feature__title--pro-icon">набор массы</h3>
+            <p class="feature__description">Заработать авторитет среди <br> дворовых котов и даже собак? <br> Серия Cat Energy Pro поможет вашему коту нарастить <br> необходимые мышцы!</p>
+            <a class="feature__link" href="catalog-pro.html">Каталог Pro</a>
+          </li>
+        </ul>
       </div>
     </section>
     <section class="about-product">
-      <h2 class="about-product__title">Как это работает</h2>
-      <ul class="about-product__list">
-        <li class="about-product__item about-product__item--leaf">Функциональное питание
-          содержит только полезные
-          питательные вещества.</li>
-        <li class="about-product__item about-product__item--water">Выпускается в виде порошка,
-          который нужно лишь залить
-          кипятком и готово.</li>
-        <li class="about-product__item about-product__item--cutlery">Замените один-два приема
-          обычной еды на наше
-          функциональное питание.</li>
-        <li class="about-product__item about-product__item--time">Уже через месяц наслаждайтесь
-          изменениями к лучшему
-          вашего питомца!</li>
-      </ul>
+      <div class="wrapper">
+        <h2 class="about-product__title">Как это работает</h2>
+        <ul class="about-product__list">
+          <li class="about-product__item about-product__item--leaf">
+            <p class="about-product__description">Функциональное питание
+              содержит только полезные
+              питательные вещества.</p>
+          </li>
+          <li class="about-product__item about-product__item--water">
+            <p class="about-product__description">Выпускается в виде порошка,
+              который нужно лишь залить
+              кипятком и готово.</p>
+          </li>
+          <li class="about-product__item about-product__item--cutlery">
+            <p class="about-product__description">Замените один-два приема
+              обычной еды на наше
+              функциональное питание.</p>
+          </li>
+          <li class="about-product__item about-product__item--time">
+            <p class="about-product__description">Уже через месяц наслаждайтесь
+              изменениями к лучшему
+              вашего питомца!</p>
+          </li>
+        </ul>
+      </div>
     </section>
     <section class="history">
-      <div class="history__wrapper">
-        <h2 class="history__title">Живой пример</h2>
-        <p class="history__intro">Борис сбросил 5 кг за 2 месяца, просто заменив свой
-          обычный корм на Cat Energy Slim. Отличный результат
-          без изнуряющих тренировок! При этом он не менял своих
-          привычек и по-прежнему спит по 16 часов в день.</p>
-        <dl class="history__list">
-          <div class="history__item">
-            <dt class="history__number">5 кг</dt>
-            <dd class="history__description">снижение<br>веса</dd>
-          </div>
-          <div class="history__item">
-            <dt class="history__number">60 дней</dt>
-            <dd class="history__description">затрачено<br>времени</dd>
-          </div>
-        </dl>
-        <p class="history__cost">Затраты на питание&#58; <span>15 000 руб.</span></p>
-        <div class=" slider">
-          <ul class=" slider__list">
-            <li class=" slider__item">
-              <picture>
-                <source width="560" height="512" type="image/png" media="(min-width: 1440px)" srcset="images/index-images/index-desktop/cat-before-desktop@1x.png 1x,images/index-images/index-desktop/cat-before-desktop@2x.png 2x">
-                <source width="560" height="512" type="image/png" media="(min-width:768px)" srcset="images/index-images/index-tablet/cat-before-tablet@1x.png 1x, images/index-images/index-tablet/cat-before-tablet@2x.png 2x">
-                <img class="slider__item-image" src="images/index-images/index-mobile/cat-before-mobile@1x.png" srcset="images/index-images/index-mobile/cat-before-mobile@2x.png 2x" alt="Фотография упитанного кота" width="280" height="256">
-              </picture>
-            </li>
-            <li class=" slider__item">
-              <picture>
-                <source width="560" height="512" type="image/png" media="(min-width: 1440px)" srcset="images/index-images/index-desktop/cat-after-desktop@1x.png 1x,images/index-images/index-desktop/cat-after-desktop@2x.png 2x">
-                <source width="560" height="512" type="image/png" media="(min-width:768px)" srcset="images/index-images/index-tablet/cat-after-tablet@1x.png 1x, images/index-images/index-tablet/cat-after-tablet@2x.png 2x">
-                <img class="slider__item-image" src="images/index-images/index-mobile/cat-after-mobile@1x.png" srcset="images/index-images/index-mobile/cat-after-mobile@2x.png 2x" alt="Фотография худого кота" width="280" height="256">
-              </picture>
-            </li>
-          </ul>
-          <div class="slider__bar">
-            <button class="slider__button" type="button">
-              <span class="visually-hidden">Кнопка слайдера</span>
-            </button>
+      <div class="wrapper">
+        <div class="history__wrapper">
+          <h2 class="history__title">Живой пример</h2>
+          <p class="history__intro">Борис сбросил 5 кг за 2 месяца, просто заменив свой
+            обычный корм на Cat Energy Slim. Отличный результат
+            без изнуряющих тренировок! При этом он не менял своих
+            привычек и по-прежнему спит по 16 часов в день.</p>
+          <dl class="history__list">
+            <div class="history__item">
+              <dt class="history__number">5 кг</dt>
+              <dd class="history__description">снижение<br>веса</dd>
+            </div>
+            <div class="history__item">
+              <dt class="history__number">60 дней</dt>
+              <dd class="history__description">затрачено<br>времени</dd>
+            </div>
+          </dl>
+          <p class="history__cost">Затраты на питание&#58; <span>15 000 руб.</span></p>
+          <div class=" slider">
+            <ul class=" slider__list">
+              <li class=" slider__item">
+                <picture>
+                  <source width="560" height="512" type="image/png" media="(min-width: 1440px)" srcset="images/index-images/index-desktop/cat-before-desktop@1x.png 1x,images/index-images/index-desktop/cat-before-desktop@2x.png 2x">
+                  <source width="560" height="512" type="image/png" media="(min-width:768px)" srcset="images/index-images/index-tablet/cat-before-tablet@1x.png 1x, images/index-images/index-tablet/cat-before-tablet@2x.png 2x">
+                  <img class="slider__item-image" src="images/index-images/index-mobile/cat-before-mobile@1x.png" srcset="images/index-images/index-mobile/cat-before-mobile@2x.png 2x" alt="Фотография упитанного кота" width="280" height="256">
+                </picture>
+              </li>
+              <li class=" slider__item">
+                <picture>
+                  <source width="560" height="512" type="image/png" media="(min-width: 1440px)" srcset="images/index-images/index-desktop/cat-after-desktop@1x.png 1x,images/index-images/index-desktop/cat-after-desktop@2x.png 2x">
+                  <source width="560" height="512" type="image/png" media="(min-width:768px)" srcset="images/index-images/index-tablet/cat-after-tablet@1x.png 1x, images/index-images/index-tablet/cat-after-tablet@2x.png 2x">
+                  <img class="slider__item-image" src="images/index-images/index-mobile/cat-after-mobile@1x.png" srcset="images/index-images/index-mobile/cat-after-mobile@2x.png 2x" alt="Фотография худого кота" width="280" height="256">
+                </picture>
+              </li>
+            </ul>
+            <div class="slider__bar">
+              <button class="slider__button" type="button">
+                <span class="visually-hidden">Кнопка слайдера</span>
+              </button>
+            </div>
           </div>
         </div>
       </div>
     </section>
     <section class="contact">
-      <div class="contact__wrapper">
-        <h2 class="contact__title">приглашаем<br>к сотрудничеству<br> дилеров!</h2>
-        <address class="contact__address">ул.Большая<br>Конюшенная, д. 19/8,<br>Санкт-Петербрург</address>
+      <div class="wrapper">
+        <div class="contact__wrapper">
+          <h2 class="contact__title">приглашаем<br>к сотрудничеству<br> дилеров!</h2>
+          <address class="contact__address">ул.Большая<br>Конюшенная, д. 19/8,<br>Санкт-Петербрург</address>
+        </div>
       </div>
     </section>
     <section class="map">
@@ -144,21 +171,23 @@
     </section>
   </main>
   <footer class="main-footer">
-    <div class="main-footer__wrapper">
-      <a class="main-footer__logo" href="index.html">
-        <img class="main-footer__logo-image" src="images/footer-logo.svg" alt="Логотип сайта." width="128" height="24">
-      </a>
-      <ul class="social">
-        <li class="social__item"><a class="social__link social__link--vkontakte" href="#"><span class="visually-hidden">Вконтакте</span></a></li>
-        <li class="social__item"><a class="social__link social__link--youtube" href="#"><span class="visually-hidden">Ютуб</span></a></li>
-        <li class="social__item"><a class="social__link social__link--telegram" href="#"><span class="visually-hidden">Телеграмм</span></a></li>
-      </ul>
-      <a class="main-footer__logo-copyright" href="https://htmlacademy.ru/intensive/adaptive" aria-label="HTML Academy">
-        <p class="main-footer__text">HTML Academy</p>
-        <svg width="27" height="34">
-          <use href="icons/logo-htmlacademy.svg"></use>
-        </svg>
-      </a>
+    <div class="wrapper">
+      <div class="main-footer__wrapper">
+        <a class="main-footer__logo" href="index.html">
+          <img class="main-footer__logo-image" src="images/footer-logo.svg" alt="Логотип сайта." width="128" height="24">
+        </a>
+        <ul class="social">
+          <li class="social__item"><a class="social__link social__link--vkontakte" href="#"><span class="visually-hidden">Вконтакте</span></a></li>
+          <li class="social__item"><a class="social__link social__link--youtube" href="#"><span class="visually-hidden">Ютуб</span></a></li>
+          <li class="social__item"><a class="social__link social__link--telegram" href="#"><span class="visually-hidden">Телеграмм</span></a></li>
+        </ul>
+        <a class="main-footer__logo-copyright" href="https://htmlacademy.ru/intensive/adaptive" aria-label="HTML Academy">
+          <p class="main-footer__text">HTML Academy</p>
+          <svg class="copyright__logo" width="27" height="34">
+            <use href="../source/icons/stack.svg#logo-htmlacademy"></use>
+          </svg>
+        </a>
+      </div>
     </div>
   </footer>
 </body>
